Popup on small screens fix Form UI errors show fix

--- a/public/assets/css/form.css
+++ b/public/assets/css/form.css
@@ -54,12 +54,13 @@
 		display: inline-block;
 		max-width: 550px;
 		min-width: 404px;
-		margin: 30px 0;
+		margin: 30px 10px;
 
 		vertical-align: middle;
 		text-align: left;
 		border-radius: 5px;
 		background: #fff;
+        white-space: normal;
 		}
 
 .isl {/* select list */
